# sessionclean

./: .gitignore  LICENSE  README.md  create_shortcut.ps1  demo.py  install.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
src/sessionclean/: __init__.py  __main__.py  app.py  config.py  constants.py  database.py  filter_engine.py  monitor.py  scanner.py  shutdown_hook.py  tray.py
src/sessionclean/gui/: __init__.py  cleanup_window.py  config_window.py  widgets.py
src/sessionclean/utils/: __init__.py  drive_utils.py  file_utils.py  logging_setup.py
tests/: conftest.py  test_config.py  test_database.py  test_filter_engine.py  test_scanner.py
